# gov-monitor

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  render.yaml
scripts/: prepare-docker.sh
src/: config.py  database.py  main.py
src/ingestion/: base_extractor.py  signals.py
src/pipeline/: scoring.py  synthesizer.py
src/schemas/: models.py
