[project]
name = "gov_monitor"
version = "0.1.0"
description = "City-scale intelligence data pipeline linking data.gov.in metrics with LLM layers for Metabase dashboards."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "psycopg2-binary>=2.9.9",
    "sqlalchemy>=2.0.29",
    "pydantic>=2.7.0",
    "requests>=2.31.0",
    "google-genai>=0.1.1",
    "python-dotenv>=1.0.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
    "black>=24.3.0",
    "isort>=5.13.2",
]